# gtk-proton-save-mgr

./: Makefile  README.md  com.bongo.GameManager.json  install.sh  org.bongo.protonsavemgr.json  pyproject.toml  requirements.txt  run.sh  stlye.css
src/: models.py  save-manager.py  ui.py  variables.py
